fix: overflow

--- a/styles.css
+++ b/styles.css
@@ -713,6 +713,7 @@ section {
   padding: 32px;
   gap: 24px;
   margin: 0px auto;
+  overflow: hidden;
 }
 
 section#roadmap-overview {
